{
    "name": "InputController",
    "maps": [
        {
            "name": "InKeeper",
            "id": "db1c99cf-f4b3-4fba-950b-dbe2dee8ec81",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c8c16370-6a0c-4572-8cb2-e10afe8ceba7",
                    "expectedControlType": "Axis",
                    "processors": "AxisDeadzone(min=0.19,max=0.9)",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e0d5f2b9-6cac-4a1b-8e29-614faab30c27",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fd01760-dcbd-450b-a263-e99d0e9fb49a",
                    "path": "<SwitchProControllerHID>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cff8aa30-5148-4ef9-80c7-6824767bfb2f",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Adventurer",
            "id": "3bf226c3-d9bc-4eda-b3ee-ec839a907d8e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "d8f2f013-a1ad-4027-ad1a-4a04aec3d70f",
                    "expectedControlType": "",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "98d6f6bd-333c-4396-8ae2-a990cdf5aed2",
                    "expectedControlType": "",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "32fde26e-e6a4-4db2-b972-ccef09154ce1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "SwitchWeapon",
                    "type": "Button",
                    "id": "595ce809-d12f-4098-ac10-0f29c23c6ebb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "47728d0d-c143-40db-b1fc-6f0cf280aaca",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f1f41bd-334e-49f7-ab17-6d997bd1d79d",
                    "path": "<SwitchProControllerHID>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64e9f92a-1e18-4f7c-ba25-4ca4ec123ef8",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9111de7b-20e6-4479-b2cc-a1f0487948af",
                    "path": "<DualShockGamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65895b6c-3b14-4802-8e78-1623cbb9ef90",
                    "path": "<SwitchProControllerHID>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "058d8203-e5f5-4b40-9de5-c22cad79f49b",
                    "path": "<SwitchProControllerHID>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8e59857-baf3-4d3a-811c-29dd708311a8",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edf28000-377e-44a2-aeea-ac2b12cfeb2f",
                    "path": "<SwitchProControllerHID>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e360cef6-09d0-4b6a-931e-797024ed7eda",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54d4a46b-ae08-457f-bc2d-f6fc343a0b5f",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b8a7def-4ba0-4f83-8f5b-3552ea36140e",
                    "path": "<SwitchProControllerHID>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "771abaa3-eb16-4aa8-9596-abc628ca072e",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}